@@ -23,8 +23,8 @@ server:
 # Empty string, mean the default setting from xs2a-impl will be used.
 xs2a.swagger.psd2.api.location: #/psd2-api-1.2-Update-2018-08-18-non-oauth.yaml
 
-funds-confirmation-user-login: anton
-funds-confirmation-user-password: 12345
+xs2a.funds-confirmation-user-login: anton
+xs2a.funds-confirmation-user-password: 12345
 
 #TanEncryption
 application:
@@ -39,18 +39,18 @@ spring:
       write_dates_as_timestamps: false
       wrap-root-value: true
 
-ledgers.url: http://localhost:8088
-cms.url: http://localhost:38080
-online-banking.url: http://localhost:8090/api/v1/consents/confirm/{userLogin}/{consentId}/{authorizationId}/{tan}
+xs2a.cms.url: http://localhost:38080
+xs2asandbox.ledgers.url: http://localhost:8088
+xs2asandbox.tppui.online-banking.url: http://localhost:8090/api/v1/consents/confirm/{userLogin}/{consentId}/{authorizationId}/{tan}
 
 # ----------------------------------------------
 # number of characters in a json string
-application.ais.transaction.max-length: 1000
+xs2a.application.ais.transaction.max-length: 1000
 
 #LOGGER
 logging.level.org.springframework.web: ERROR
 
-license.url: https://github.com/adorsys/xs2a/blob/master/LICENSE.md
+xs2a.license.url: https://github.com/adorsys/xs2a/blob/master/LICENSE.md
 springfox.documentation.swagger.v2.path: /swagger.json
 
 skip.ssl.certificate.verification: true
