@@ -19,5 +19,5 @@ package de.adorsys.ledgers.rest.client;
 import de.adorsys.ledgers.middleware.rest.resource.ConsentRestAPI;
 import org.springframework.cloud.openfeign.FeignClient;
 
-@FeignClient(value = "ledgersConsent", url = "${ledgers.url}", path=ConsentRestAPI.BASE_PATH, configuration=FeignConfig.class)
+@FeignClient(value = "ledgersConsent", url = "${xs2asandbox.ledgers.url}", path=ConsentRestAPI.BASE_PATH, configuration=FeignConfig.class)
 public interface ConsentRestClient extends ConsentRestAPI{}
